<resources>
    <string name="app_name">Computer Calculator</string>
    <string name="budget">Budget($)</string>
    <string name="memory">Memory</string>
    <string name="memory2gb">2GB</string>
    <string name="memory4gb">4GB</string>
    <string name="memory8gb">8GB</string>
    <string name="memory16gb">16GB</string>
    <string name="storage">Storage</string>
    <string name="store250gb">250GB</string>
    <string name="store500gb">500GB</string>
    <string name="store750gb">750GB</string>
    <string name="store1tb">1TB</string>
    <string name="accessories">Accessories</string>
    <string name="mouse">Mouse</string>
    <string name="flashdrive">Flash Drive</string>
    <string name="cooling">Cooling Pad</string>
    <string name="carrycase">Carrying Case</string>
    <string name="tip">Tip %</string>
    <string name="tipvalue" />
    <string name="delivery">Delivery</string>
    <string name="deliverysw" />
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="price">Price : $0.00</string>
    <string name="status">Your Status</string>
    <string name="statebudget" />
    <string name="amt" />
</resources>
